--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
           <div class="panel-content">
             <div class="preset-group">
               <select id="format-select">
+                <option value="viewport" selected>
+                  Superficie di Visualizzazione
+                </option>
                 <option value="595x842">Stampa: A4 (Verticale)</option>
                 <option value="842x1191">Stampa: A3 (Verticale)</option>
                 <option value="1080x1350">Social: Post Instagram (4:5)</option>
