--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               data-key="maxSources"
               data-target="config"
             >
-              <label>Max Sorgenti <span class="value-display">50</span></label>
+              <label>Sorgenti <span class="value-display">50</span></label>
               <input type="range" min="1" max="200" step="1" value="50" />
             </div>
           </div>
@@ -206,7 +206,7 @@
             >
               <label>
                 <input type="checkbox" checked />
-                Includi sfondo nell'export
+                Includi sfondo
               </label>
             </div>
             <button id="save-waves-btn">Esporta PNG</button>
