--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
           <h1>Risonanza</h1>
           <p>Simulatore di Onde</p>
         </header>
+
+        <!-- Formati Canvas -->
         <div class="ui-panel">
           <h2 class="panel-header">Formati Canvas</h2>
           <div class="panel-content">
@@ -49,6 +51,8 @@
             <button id="apply-format-btn">Applica Formato</button>
           </div>
         </div>
+
+        <!-- Onde Primarie -->
         <div class="ui-panel">
           <h2 class="panel-header">Onde Primarie</h2>
           <div class="panel-content">
@@ -94,6 +98,8 @@
             </div>
           </div>
         </div>
+
+        <!-- Onde Secondarie -->
         <div class="ui-panel">
           <h2 class="panel-header">Onde Secondarie</h2>
           <div class="panel-content">
@@ -118,8 +124,8 @@
               data-key="strokeSecondary"
               data-target="config"
             >
-              <label>Spessore <span class="value-display">40</span></label>
-              <input type="range" min="1" max="200" step="1" value="40" />
+              <label>Spessore <span class="value-display">20</span></label>
+              <input type="range" min="1" max="200" step="1" value="20" />
             </div>
             <div
               class="slider-group"
@@ -139,6 +145,8 @@
             </div>
           </div>
         </div>
+
+        <!-- Simulazione -->
         <div class="ui-panel">
           <h2 class="panel-header">Simulazione</h2>
           <div class="panel-content">
@@ -166,6 +174,8 @@
             </div>
           </div>
         </div>
+
+        <!-- Stile & Esporta -->
         <div class="ui-panel">
           <h2 class="panel-header">Stile & Esporta</h2>
           <div class="panel-content">
@@ -209,9 +219,21 @@
                 Includi sfondo
               </label>
             </div>
-            <button id="save-waves-btn">Esporta PNG</button>
+
+            <!-- FORMATO ESPORTAZIONE -->
+            <div class="export-format-group">
+              <label for="export-format">Formato Esportazione</label>
+              <select id="export-format">
+                <option value="png" selected>PNG</option>
+                <option value="svg">SVG</option>
+              </select>
+            </div>
+
+            <button id="save-waves-btn">Esporta</button>
           </div>
         </div>
+
+        <!-- Footer -->
         <footer>
           <div id="quick-controls">
             <button id="pause-btn">Pausa</button>
