--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
           <p>Simulatore di Onde</p>
         </header>
 
-        <!-- Formati Canvas -->
         <div class="ui-panel">
           <h2 class="panel-header">Formati Canvas</h2>
           <div class="panel-content">
@@ -52,7 +51,6 @@
           </div>
         </div>
 
-        <!-- Onde Primarie -->
         <div class="ui-panel">
           <h2 class="panel-header">Onde Primarie</h2>
           <div class="panel-content">
@@ -99,7 +97,6 @@
           </div>
         </div>
 
-        <!-- Onde Secondarie -->
         <div class="ui-panel">
           <h2 class="panel-header">Onde Secondarie</h2>
           <div class="panel-content">
@@ -146,7 +143,6 @@
           </div>
         </div>
 
-        <!-- Simulazione -->
         <div class="ui-panel">
           <h2 class="panel-header">Simulazione</h2>
           <div class="panel-content">
@@ -175,7 +171,6 @@
           </div>
         </div>
 
-        <!-- Stile & Esporta -->
         <div class="ui-panel">
           <h2 class="panel-header">Stile & Esporta</h2>
           <div class="panel-content">
@@ -219,21 +214,10 @@
                 Includi sfondo
               </label>
             </div>
-
-            <!-- FORMATO ESPORTAZIONE -->
-            <div class="export-format-group">
-              <label for="export-format">Formato Esportazione</label>
-              <select id="export-format">
-                <option value="png" selected>PNG</option>
-                <option value="svg">SVG</option>
-              </select>
-            </div>
-
-            <button id="save-waves-btn">Esporta</button>
+            <button id="save-waves-btn">Esporta PNG</button>
           </div>
         </div>
 
-        <!-- Footer -->
         <footer>
           <div id="quick-controls">
             <button id="pause-btn">Pausa</button>
