--- a/index.html
+++ b/index.html
@@ -59,40 +59,102 @@
               data-key="speedPrimary"
               data-target="config"
             >
-              <label>Velocità <span class="value-display">30</span></label>
-              <input type="range" min="1" max="200" step="1" value="30" />
+              <label>Velocità</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="1" max="200" step="1" value="30" />
+                <input
+                  type="number"
+                  min="1"
+                  max="200"
+                  step="1"
+                  value="30"
+                  class="value-input"
+                />
+              </div>
             </div>
             <div
               class="slider-group"
               data-key="intervalPrimary"
               data-target="config"
             >
-              <label>Frequenza <span class="value-display">0.30</span></label>
-              <input type="range" min="0.05" max="2" step="0.01" value="0.3" />
+              <label>Frequenza</label>
+              <div class="slider-input-wrapper">
+                <input
+                  type="range"
+                  min="0.05"
+                  max="2"
+                  step="0.01"
+                  value="0.3"
+                />
+                <input
+                  type="number"
+                  min="0.05"
+                  max="2"
+                  step="0.01"
+                  value="0.3"
+                  class="value-input"
+                />
+              </div>
             </div>
             <div
               class="slider-group"
               data-key="strokePrimary"
               data-target="config"
             >
-              <label>Spessore <span class="value-display">80</span></label>
-              <input type="range" min="1" max="200" step="1" value="80" />
+              <label>Spessore</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="1" max="200" step="1" value="80" />
+                <input
+                  type="number"
+                  min="1"
+                  max="200"
+                  step="1"
+                  value="80"
+                  class="value-input"
+                />
+              </div>
             </div>
             <div
               class="slider-group"
               data-key="alphaPrimary"
               data-target="config"
             >
-              <label>Opacità <span class="value-display">0.80</span></label>
-              <input type="range" min="0.01" max="1" step="0.01" value="0.8" />
+              <label>Opacità</label>
+              <div class="slider-input-wrapper">
+                <input
+                  type="range"
+                  min="0.01"
+                  max="1"
+                  step="0.01"
+                  value="0.8"
+                />
+                <input
+                  type="number"
+                  min="0.01"
+                  max="1"
+                  step="0.01"
+                  value="0.8"
+                  class="value-input"
+                />
+              </div>
             </div>
             <div
               class="slider-group"
               data-key="decayFactorPrimary"
               data-target="config"
             >
-              <label>Durata <span class="value-display">1.5</span></label>
-              <input type="range" min="0.1" max="5" step="0.1" value="1.5" />
+              <label>Durata</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="0.1" max="5" step="0.1" value="1.5" />
+                <input
+                  type="number"
+                  min="0.1"
+                  max="5"
+                  step="0.1"
+                  value="1.5"
+                  class="value-input"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -105,40 +167,102 @@
               data-key="speedSecondary"
               data-target="config"
             >
-              <label>Velocità <span class="value-display">30</span></label>
-              <input type="range" min="1" max="200" step="1" value="30" />
+              <label>Velocità</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="1" max="200" step="1" value="30" />
+                <input
+                  type="number"
+                  min="1"
+                  max="200"
+                  step="1"
+                  value="30"
+                  class="value-input"
+                />
+              </div>
             </div>
             <div
               class="slider-group"
               data-key="intervalSecondary"
               data-target="config"
             >
-              <label>Frequenza <span class="value-display">0.20</span></label>
-              <input type="range" min="0.05" max="2" step="0.01" value="0.2" />
+              <label>Frequenza</label>
+              <div class="slider-input-wrapper">
+                <input
+                  type="range"
+                  min="0.05"
+                  max="2"
+                  step="0.01"
+                  value="0.2"
+                />
+                <input
+                  type="number"
+                  min="0.05"
+                  max="2"
+                  step="0.01"
+                  value="0.2"
+                  class="value-input"
+                />
+              </div>
             </div>
             <div
               class="slider-group"
               data-key="strokeSecondary"
               data-target="config"
             >
-              <label>Spessore <span class="value-display">20</span></label>
-              <input type="range" min="1" max="200" step="1" value="20" />
+              <label>Spessore</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="1" max="200" step="1" value="20" />
+                <input
+                  type="number"
+                  min="1"
+                  max="200"
+                  step="1"
+                  value="20"
+                  class="value-input"
+                />
+              </div>
             </div>
             <div
               class="slider-group"
               data-key="alphaSecondary"
               data-target="config"
             >
-              <label>Opacità <span class="value-display">0.80</span></label>
-              <input type="range" min="0.01" max="1" step="0.01" value="0.8" />
+              <label>Opacità</label>
+              <div class="slider-input-wrapper">
+                <input
+                  type="range"
+                  min="0.01"
+                  max="1"
+                  step="0.01"
+                  value="0.8"
+                />
+                <input
+                  type="number"
+                  min="0.01"
+                  max="1"
+                  step="0.01"
+                  value="0.8"
+                  class="value-input"
+                />
+              </div>
             </div>
             <div
               class="slider-group"
               data-key="decayFactorSecondary"
               data-target="config"
             >
-              <label>Durata <span class="value-display">1.5</span></label>
-              <input type="range" min="0.1" max="5" step="0.1" value="1.5" />
+              <label>Durata</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="0.1" max="5" step="0.1" value="1.5" />
+                <input
+                  type="number"
+                  min="0.1"
+                  max="5"
+                  step="0.1"
+                  value="1.5"
+                  class="value-input"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -147,26 +271,54 @@
           <h2 class="panel-header">Simulazione</h2>
           <div class="panel-content">
             <div class="slider-group" data-key="maxWaves" data-target="config">
-              <label
-                >Numero Fronti Onda <span class="value-display">5</span></label
-              >
-              <input type="range" min="1" max="20" step="1" value="5" />
+              <label>Numero Fronti Onda</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="1" max="20" step="1" value="5" />
+                <input
+                  type="number"
+                  min="1"
+                  max="20"
+                  step="1"
+                  value="5"
+                  class="value-input"
+                />
+              </div>
             </div>
             <div
               class="slider-group"
               data-key="maxReflections"
               data-target="config"
             >
-              <label>Riflessioni <span class="value-display">2</span></label>
-              <input type="range" min="0" max="5" step="1" value="2" />
+              <label>Riflessioni</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="0" max="5" step="1" value="2" />
+                <input
+                  type="number"
+                  min="0"
+                  max="5"
+                  step="1"
+                  value="2"
+                  class="value-input"
+                />
+              </div>
             </div>
             <div
               class="slider-group"
               data-key="maxSources"
               data-target="config"
             >
-              <label>Sorgenti <span class="value-display">50</span></label>
-              <input type="range" min="1" max="200" step="1" value="50" />
+              <label>Sorgenti</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="1" max="200" step="1" value="50" />
+                <input
+                  type="number"
+                  min="1"
+                  max="200"
+                  step="1"
+                  value="50"
+                  class="value-input"
+                />
+              </div>
             </div>
           </div>
         </div>
