--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="ui-panel">
-          <h2 class="panel-header">Formati Canvas</h2>
+          <h2 class="panel-header">Formato</h2>
           <div class="panel-content">
             <div class="preset-group">
               <select id="format-select">
@@ -37,6 +37,8 @@
                 </option>
                 <option value="595x842">Stampa: A4 (Verticale)</option>
                 <option value="842x1191">Stampa: A3 (Verticale)</option>
+                <option value="842x595">Stampa: A4 (Orizzontale)</option>
+                <option value="1191x842">Stampa: A3 (Orizzontale)</option>
                 <option value="1080x1350">Social: Post Instagram (4:5)</option>
                 <option value="1080x1920">
                   Social: Storia Instagram (9:16)
