add "applica preset" button

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <div class="preset-group">
               <label for="preset-select">Seleziona uno stato</label>
               <select id="preset-select"></select>
+              <button id="apply-preset-btn" style="margin-top: 15px">
+                Applica Preset
+              </button>
             </div>
           </div>
         </div>
