add "visibilità onde"

--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
         </div>
 
         <div class="ui-panel">
+          <h2 class="panel-header">Visibilità Onde</h2>
+          <div class="panel-content">
+            <div class="preset-group">
+              <label for="wave-display-select">Mostra onde</label>
+              <select id="wave-display-select">
+                <option value="both" selected>Entrambe le Onde</option>
+                <option value="primary">Solo Onde Primarie</option>
+                <option value="secondary">Solo Onde Secondarie</option>
+              </select>
+            </div>
+          </div>
+        </div>
+        <div class="ui-panel">
           <h2 class="panel-header">Onde Primarie</h2>
           <div class="panel-content">
             <div
