--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </header>
 
         <div class="ui-panel">
-          <h2 class="panel-header">Preset</h2>
+          <h2 class="panel-header active">Preset</h2>
           <div class="panel-content show">
             <div class="preset-group">
               <label for="preset-select">Seleziona uno stato</label>
@@ -79,6 +79,53 @@
             </div>
           </div>
         </div>
+
+        <div class="ui-panel">
+          <h2 class="panel-header">Zoom</h2>
+          <div class="panel-content">
+            <div class="preset-group">
+              <label for="zoom-select">Livello Zoom</label>
+              <select id="zoom-select">
+                <option value="fit">Adatta allo Schermo</option>
+                <option value="0.25">25%</option>
+                <option value="0.5">50%</option>
+                <option value="0.75">75%</option>
+                <option value="1" selected>100% (Default)</option>
+                <option value="1.5">150%</option>
+                <option value="2">200%</option>
+                <option value="4">400%</option>
+              </select>
+              <button id="apply-zoom-btn" style="margin-top: 15px">
+                Applica Zoom
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="ui-panel">
+          <h2 class="panel-header">Forma d'Onda</h2>
+          <div class="panel-content">
+            <div
+              class="slider-group"
+              data-key="heartBaseSize"
+              data-target="config"
+            >
+              <label>Dimensione Cuore</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="0.1" max="3" step="0.05" value="1" />
+                <input
+                  type="number"
+                  min="0.1"
+                  max="3"
+                  step="0.05"
+                  value="1"
+                  class="value-input"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="ui-panel">
           <h2 class="panel-header">Onde Primarie</h2>
           <div class="panel-content">
