--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
         </div>
 
         <div class="ui-panel">
-          <h2 class="panel-header">Forma d'Onda</h2>
+          <h2 class="panel-header">Dimensione d'Onda</h2>
           <div class="panel-content">
             <div
               class="slider-group"
               data-key="heartBaseSize"
               data-target="config"
             >
-              <label>Dimensione Cuore</label>
+              <label>Dimensione</label>
               <div class="slider-input-wrapper">
                 <input type="range" min="0.1" max="3" step="0.05" value="1" />
                 <input
