--- a/index.html
+++ b/index.html
@@ -103,30 +103,6 @@
         </div>
 
         <div class="ui-panel">
-          <h2 class="panel-header">Dimensione d'Onda</h2>
-          <div class="panel-content">
-            <div
-              class="slider-group"
-              data-key="heartBaseSize"
-              data-target="config"
-            >
-              <label>Dimensione</label>
-              <div class="slider-input-wrapper">
-                <input type="range" min="0.1" max="3" step="0.05" value="1" />
-                <input
-                  type="number"
-                  min="0.1"
-                  max="3"
-                  step="0.05"
-                  value="1"
-                  class="value-input"
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="ui-panel">
           <h2 class="panel-header">Onde Primarie</h2>
           <div class="panel-content">
             <div
@@ -173,24 +149,6 @@
             </div>
             <div
               class="slider-group"
-              data-key="strokePrimary"
-              data-target="config"
-            >
-              <label>Spessore</label>
-              <div class="slider-input-wrapper">
-                <input type="range" min="1" max="200" step="1" value="80" />
-                <input
-                  type="number"
-                  min="1"
-                  max="200"
-                  step="1"
-                  value="80"
-                  class="value-input"
-                />
-              </div>
-            </div>
-            <div
-              class="slider-group"
               data-key="alphaPrimary"
               data-target="config"
             >
@@ -227,6 +185,42 @@
                   max="5"
                   step="0.1"
                   value="1.5"
+                  class="value-input"
+                />
+              </div>
+            </div>
+            <div
+              class="slider-group"
+              data-key="heartSizePrimary"
+              data-target="config"
+            >
+              <label>Dimensione</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="0.1" max="3" step="0.05" value="1" />
+                <input
+                  type="number"
+                  min="0.1"
+                  max="3"
+                  step="0.05"
+                  value="1"
+                  class="value-input"
+                />
+              </div>
+            </div>
+            <div
+              class="slider-group"
+              data-key="strokePrimary"
+              data-target="config"
+            >
+              <label>Spessore</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="1" max="200" step="1" value="80" />
+                <input
+                  type="number"
+                  min="1"
+                  max="200"
+                  step="1"
+                  value="80"
                   class="value-input"
                 />
               </div>
@@ -281,24 +275,6 @@
             </div>
             <div
               class="slider-group"
-              data-key="strokeSecondary"
-              data-target="config"
-            >
-              <label>Spessore</label>
-              <div class="slider-input-wrapper">
-                <input type="range" min="1" max="200" step="1" value="20" />
-                <input
-                  type="number"
-                  min="1"
-                  max="200"
-                  step="1"
-                  value="20"
-                  class="value-input"
-                />
-              </div>
-            </div>
-            <div
-              class="slider-group"
               data-key="alphaSecondary"
               data-target="config"
             >
@@ -335,6 +311,42 @@
                   max="5"
                   step="0.1"
                   value="1.5"
+                  class="value-input"
+                />
+              </div>
+            </div>
+            <div
+              class="slider-group"
+              data-key="heartSizeSecondary"
+              data-target="config"
+            >
+              <label>Dimensione</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="0.1" max="3" step="0.05" value="1" />
+                <input
+                  type="number"
+                  min="0.1"
+                  max="3"
+                  step="0.05"
+                  value="1"
+                  class="value-input"
+                />
+              </div>
+            </div>
+            <div
+              class="slider-group"
+              data-key="strokeSecondary"
+              data-target="config"
+            >
+              <label>Spessore</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="1" max="200" step="1" value="20" />
+                <input
+                  type="number"
+                  min="1"
+                  max="200"
+                  step="1"
+                  value="20"
                   class="value-input"
                 />
               </div>
