--- a/index.html
+++ b/index.html
@@ -67,20 +67,6 @@
         </div>
 
         <div class="ui-panel">
-          <h2 class="panel-header">Visibilità Onde</h2>
-          <div class="panel-content">
-            <div class="preset-group">
-              <label for="wave-display-select">Mostra onde</label>
-              <select id="wave-display-select">
-                <option value="both" selected>Entrambe le Onde</option>
-                <option value="primary">Solo Onde Primarie</option>
-                <option value="secondary">Solo Onde Secondarie</option>
-              </select>
-            </div>
-          </div>
-        </div>
-
-        <div class="ui-panel">
           <h2 class="panel-header">Zoom</h2>
           <div class="panel-content">
             <div class="preset-group">
@@ -98,6 +84,20 @@
               <button id="apply-zoom-btn" style="margin-top: 15px">
                 Applica Zoom
               </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="ui-panel">
+          <h2 class="panel-header">Visibilità Onde</h2>
+          <div class="panel-content">
+            <div class="preset-group">
+              <label for="wave-display-select">Mostra onde</label>
+              <select id="wave-display-select">
+                <option value="both" selected>Entrambe le Onde</option>
+                <option value="primary">Solo Onde Primarie</option>
+                <option value="secondary">Solo Onde Secondarie</option>
+              </select>
             </div>
           </div>
         </div>
@@ -358,7 +358,7 @@
           <h2 class="panel-header">Stile & Esporta</h2>
           <div class="panel-content">
             <div class="color-picker-group">
-              <label for="bg">Colore Sfondo</label>
+              <label>Colore Sfondo</label>
               <div class="color-input-wrapper">
                 <input
                   type="color"
@@ -370,7 +370,7 @@
               </div>
             </div>
             <div class="color-picker-group">
-              <label for="stroke">Colore Primario</label>
+              <label>Colore Primario</label>
               <div class="color-input-wrapper">
                 <input
                   type="color"
@@ -382,7 +382,7 @@
               </div>
             </div>
             <div class="color-picker-group">
-              <label for="stroke2">Colore Secondario</label>
+              <label>Colore Secondario</label>
               <div class="color-input-wrapper">
                 <input
                   type="color"
