--- a/index.html
+++ b/index.html
@@ -18,13 +18,28 @@
         </header>
 
         <div class="ui-panel">
-          <h2 class="panel-header active">Preset</h2>
+          <h2 class="panel-header active">Preset Aspetto</h2>
           <div class="panel-content show">
             <div class="preset-group">
               <label for="preset-select">Seleziona uno stato</label>
               <select id="preset-select"></select>
               <button id="apply-preset-btn" style="margin-top: 15px">
                 Applica Preset
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="ui-panel">
+          <h2 class="panel-header active">Preset Animazione</h2>
+          <div class="panel-content show">
+            <div class="preset-group">
+              <label for="animation-preset-select"
+                >Seleziona un'animazione</label
+              >
+              <select id="animation-preset-select"></select>
+              <button id="play-animation-btn" style="margin-top: 15px">
+                Play Animazione
               </button>
             </div>
           </div>
@@ -67,6 +82,20 @@
         </div>
 
         <div class="ui-panel">
+          <h2 class="panel-header">Visibilità Onde</h2>
+          <div class="panel-content">
+            <div class="preset-group">
+              <label for="wave-display-select">Mostra onde</label>
+              <select id="wave-display-select">
+                <option value="both" selected>Entrambe le Onde</option>
+                <option value="primary">Solo Onde Primarie</option>
+                <option value="secondary">Solo Onde Secondarie</option>
+              </select>
+            </div>
+          </div>
+        </div>
+
+        <div class="ui-panel">
           <h2 class="panel-header">Zoom</h2>
           <div class="panel-content">
             <div class="preset-group">
@@ -84,20 +113,6 @@
               <button id="apply-zoom-btn" style="margin-top: 15px">
                 Applica Zoom
               </button>
-            </div>
-          </div>
-        </div>
-
-        <div class="ui-panel">
-          <h2 class="panel-header">Visibilità Onde</h2>
-          <div class="panel-content">
-            <div class="preset-group">
-              <label for="wave-display-select">Mostra onde</label>
-              <select id="wave-display-select">
-                <option value="both" selected>Entrambe le Onde</option>
-                <option value="primary">Solo Onde Primarie</option>
-                <option value="secondary">Solo Onde Secondarie</option>
-              </select>
             </div>
           </div>
         </div>
@@ -194,7 +209,7 @@
               data-key="heartSizePrimary"
               data-target="config"
             >
-              <label>Dimensione</label>
+              <label>Dimensione Cuore</label>
               <div class="slider-input-wrapper">
                 <input type="range" min="0.1" max="3" step="0.05" value="1" />
                 <input
@@ -320,7 +335,7 @@
               data-key="heartSizeSecondary"
               data-target="config"
             >
-              <label>Dimensione</label>
+              <label>Dimensione Cuore</label>
               <div class="slider-input-wrapper">
                 <input type="range" min="0.1" max="3" step="0.05" value="1" />
                 <input
