--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
             <div class="preset-group">
               <label for="preset-select">Seleziona uno stato</label>
               <select id="preset-select"></select>
-              <button id="apply-preset-btn" style="margin-top: 15px">
-                Applica Preset
-              </button>
+              <button id="apply-preset-btn">Applica Preset</button>
             </div>
           </div>
         </div>
@@ -49,14 +47,15 @@
                 </div>
               </div>
             </div>
-            <button id="play-animation-btn" style="margin-top: 5px">
-              Play Animazione Selezionata
-            </button>
+            <div class="preset-group">
+              <button id="play-animation-btn">
+                Play Animazione Selezionata
+              </button>
+            </div>
             <div
               class="preset-group"
               style="
-                margin-top: 20px;
-                border-top: 1px solid #eee;
+                border-top: 1px solid var(--border-color);
                 padding-top: 20px;
               "
             >
@@ -87,6 +86,42 @@
               data-target="config"
             >
               <label>Numero Sorgenti Max</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="1" max="20" step="1" value="5" />
+                <input
+                  type="number"
+                  min="1"
+                  max="20"
+                  step="1"
+                  value="5"
+                  class="value-input"
+                />
+              </div>
+            </div>
+            <div
+              class="slider-group"
+              data-key="maxWavesPrimary"
+              data-target="config"
+            >
+              <label>Numero Onde Primarie</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="1" max="20" step="1" value="5" />
+                <input
+                  type="number"
+                  min="1"
+                  max="20"
+                  step="1"
+                  value="5"
+                  class="value-input"
+                />
+              </div>
+            </div>
+            <div
+              class="slider-group"
+              data-key="maxWavesSecondary"
+              data-target="config"
+            >
+              <label>Numero Onde Secondarie</label>
               <div class="slider-input-wrapper">
                 <input type="range" min="1" max="20" step="1" value="5" />
                 <input
@@ -152,7 +187,9 @@
                 <input type="number" id="custom-height" value="842" />
               </div>
             </div>
-            <button id="apply-format-btn">Applica Formato</button>
+            <div class="preset-group">
+              <button id="apply-format-btn">Applica Formato</button>
+            </div>
           </div>
         </div>
 
@@ -185,299 +222,19 @@
                 <option value="2">200%</option>
                 <option value="4">400%</option>
               </select>
-              <button id="apply-zoom-btn" style="margin-top: 15px">
-                Applica Zoom
-              </button>
+              <button id="apply-zoom-btn">Applica Zoom</button>
             </div>
           </div>
         </div>
 
         <div class="ui-panel">
           <h2 class="panel-header">Onde Primarie</h2>
-          <div class="panel-content">
-            <div
-              class="slider-group"
-              data-key="maxWavesPrimary"
-              data-target="config"
-            >
-              <label>Numero Onde</label>
-              <div class="slider-input-wrapper">
-                <input type="range" min="1" max="20" step="1" value="5" />
-                <input
-                  type="number"
-                  min="1"
-                  max="20"
-                  step="1"
-                  value="5"
-                  class="value-input"
-                />
-              </div>
-            </div>
-            <div
-              class="slider-group"
-              data-key="speedPrimary"
-              data-target="config"
-            >
-              <label>Velocità</label>
-              <div class="slider-input-wrapper">
-                <input type="range" min="1" max="200" step="1" value="30" />
-                <input
-                  type="number"
-                  min="1"
-                  max="200"
-                  step="1"
-                  value="30"
-                  class="value-input"
-                />
-              </div>
-            </div>
-            <div
-              class="slider-group"
-              data-key="intervalPrimary"
-              data-target="config"
-            >
-              <label>Frequenza</label>
-              <div class="slider-input-wrapper">
-                <input
-                  type="range"
-                  min="0.05"
-                  max="2"
-                  step="0.01"
-                  value="0.3"
-                />
-                <input
-                  type="number"
-                  min="0.05"
-                  max="2"
-                  step="0.01"
-                  value="0.3"
-                  class="value-input"
-                />
-              </div>
-            </div>
-            <div
-              class="slider-group"
-              data-key="alphaPrimary"
-              data-target="config"
-            >
-              <label>Opacità</label>
-              <div class="slider-input-wrapper">
-                <input
-                  type="range"
-                  min="0.01"
-                  max="1"
-                  step="0.01"
-                  value="0.8"
-                />
-                <input
-                  type="number"
-                  min="0.01"
-                  max="1"
-                  step="0.01"
-                  value="0.8"
-                  class="value-input"
-                />
-              </div>
-            </div>
-            <div
-              class="slider-group"
-              data-key="decayFactorPrimary"
-              data-target="config"
-            >
-              <label>Durata</label>
-              <div class="slider-input-wrapper">
-                <input type="range" min="0.1" max="5" step="0.1" value="1.5" />
-                <input
-                  type="number"
-                  min="0.1"
-                  max="5"
-                  step="0.1"
-                  value="1.5"
-                  class="value-input"
-                />
-              </div>
-            </div>
-            <div
-              class="slider-group"
-              data-key="heartSizePrimary"
-              data-target="config"
-            >
-              <label>Dimensione Cuore</label>
-              <div class="slider-input-wrapper">
-                <input type="range" min="0.1" max="3" step="0.05" value="1" />
-                <input
-                  type="number"
-                  min="0.1"
-                  max="3"
-                  step="0.05"
-                  value="1"
-                  class="value-input"
-                />
-              </div>
-            </div>
-            <div
-              class="slider-group"
-              data-key="strokePrimary"
-              data-target="config"
-            >
-              <label>Spessore</label>
-              <div class="slider-input-wrapper">
-                <input type="range" min="1" max="200" step="1" value="80" />
-                <input
-                  type="number"
-                  min="1"
-                  max="200"
-                  step="1"
-                  value="80"
-                  class="value-input"
-                />
-              </div>
-            </div>
-          </div>
+          <div class="panel-content"></div>
         </div>
 
         <div class="ui-panel">
           <h2 class="panel-header">Onde Secondarie</h2>
-          <div class="panel-content">
-            <div
-              class="slider-group"
-              data-key="maxWavesSecondary"
-              data-target="config"
-            >
-              <label>Numero Onde</label>
-              <div class="slider-input-wrapper">
-                <input type="range" min="1" max="20" step="1" value="5" />
-                <input
-                  type="number"
-                  min="1"
-                  max="20"
-                  step="1"
-                  value="5"
-                  class="value-input"
-                />
-              </div>
-            </div>
-            <div
-              class="slider-group"
-              data-key="speedSecondary"
-              data-target="config"
-            >
-              <label>Velocità</label>
-              <div class="slider-input-wrapper">
-                <input type="range" min="1" max="200" step="1" value="30" />
-                <input
-                  type="number"
-                  min="1"
-                  max="200"
-                  step="1"
-                  value="30"
-                  class="value-input"
-                />
-              </div>
-            </div>
-            <div
-              class="slider-group"
-              data-key="intervalSecondary"
-              data-target="config"
-            >
-              <label>Frequenza</label>
-              <div class="slider-input-wrapper">
-                <input
-                  type="range"
-                  min="0.05"
-                  max="2"
-                  step="0.01"
-                  value="0.2"
-                />
-                <input
-                  type="number"
-                  min="0.05"
-                  max="2"
-                  step="0.01"
-                  value="0.2"
-                  class="value-input"
-                />
-              </div>
-            </div>
-            <div
-              class="slider-group"
-              data-key="alphaSecondary"
-              data-target="config"
-            >
-              <label>Opacità</label>
-              <div class="slider-input-wrapper">
-                <input
-                  type="range"
-                  min="0.01"
-                  max="1"
-                  step="0.01"
-                  value="0.8"
-                />
-                <input
-                  type="number"
-                  min="0.01"
-                  max="1"
-                  step="0.01"
-                  value="0.8"
-                  class="value-input"
-                />
-              </div>
-            </div>
-            <div
-              class="slider-group"
-              data-key="decayFactorSecondary"
-              data-target="config"
-            >
-              <label>Durata</label>
-              <div class="slider-input-wrapper">
-                <input type="range" min="0.1" max="5" step="0.1" value="1.5" />
-                <input
-                  type="number"
-                  min="0.1"
-                  max="5"
-                  step="0.1"
-                  value="1.5"
-                  class="value-input"
-                />
-              </div>
-            </div>
-            <div
-              class="slider-group"
-              data-key="heartSizeSecondary"
-              data-target="config"
-            >
-              <label>Dimensione Cuore</label>
-              <div class="slider-input-wrapper">
-                <input type="range" min="0.1" max="3" step="0.05" value="1" />
-                <input
-                  type="number"
-                  min="0.1"
-                  max="3"
-                  step="0.05"
-                  value="1"
-                  class="value-input"
-                />
-              </div>
-            </div>
-            <div
-              class="slider-group"
-              data-key="strokeSecondary"
-              data-target="config"
-            >
-              <label>Spessore</label>
-              <div class="slider-input-wrapper">
-                <input type="range" min="1" max="200" step="1" value="20" />
-                <input
-                  type="number"
-                  min="1"
-                  max="200"
-                  step="1"
-                  value="20"
-                  class="value-input"
-                />
-              </div>
-            </div>
-          </div>
+          <div class="panel-content"></div>
         </div>
 
         <div class="ui-panel">
