--- a/index.html
+++ b/index.html
@@ -100,42 +100,6 @@
             </div>
             <div
               class="slider-group"
-              data-key="maxWavesPrimary"
-              data-target="config"
-            >
-              <label>Numero Onde Primarie</label>
-              <div class="slider-input-wrapper">
-                <input type="range" min="1" max="20" step="1" value="5" />
-                <input
-                  type="number"
-                  min="1"
-                  max="20"
-                  step="1"
-                  value="5"
-                  class="value-input"
-                />
-              </div>
-            </div>
-            <div
-              class="slider-group"
-              data-key="maxWavesSecondary"
-              data-target="config"
-            >
-              <label>Numero Onde Secondarie</label>
-              <div class="slider-input-wrapper">
-                <input type="range" min="1" max="20" step="1" value="5" />
-                <input
-                  type="number"
-                  min="1"
-                  max="20"
-                  step="1"
-                  value="5"
-                  class="value-input"
-                />
-              </div>
-            </div>
-            <div
-              class="slider-group"
               data-key="maxReflections"
               data-target="config"
             >
@@ -229,12 +193,290 @@
 
         <div class="ui-panel">
           <h2 class="panel-header">Onde Primarie</h2>
-          <div class="panel-content"></div>
+          <div class="panel-content">
+            <div
+              class="slider-group"
+              data-key="maxWavesPrimary"
+              data-target="config"
+            >
+              <label>Numero Onde</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="1" max="20" step="1" value="5" />
+                <input
+                  type="number"
+                  min="1"
+                  max="20"
+                  step="1"
+                  value="5"
+                  class="value-input"
+                />
+              </div>
+            </div>
+            <div
+              class="slider-group"
+              data-key="speedPrimary"
+              data-target="config"
+            >
+              <label>Velocità</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="1" max="200" step="1" value="30" />
+                <input
+                  type="number"
+                  min="1"
+                  max="200"
+                  step="1"
+                  value="30"
+                  class="value-input"
+                />
+              </div>
+            </div>
+            <div
+              class="slider-group"
+              data-key="intervalPrimary"
+              data-target="config"
+            >
+              <label>Frequenza</label>
+              <div class="slider-input-wrapper">
+                <input
+                  type="range"
+                  min="0.05"
+                  max="2"
+                  step="0.01"
+                  value="0.3"
+                />
+                <input
+                  type="number"
+                  min="0.05"
+                  max="2"
+                  step="0.01"
+                  value="0.3"
+                  class="value-input"
+                />
+              </div>
+            </div>
+            <div
+              class="slider-group"
+              data-key="alphaPrimary"
+              data-target="config"
+            >
+              <label>Opacità</label>
+              <div class="slider-input-wrapper">
+                <input
+                  type="range"
+                  min="0.01"
+                  max="1"
+                  step="0.01"
+                  value="0.8"
+                />
+                <input
+                  type="number"
+                  min="0.01"
+                  max="1"
+                  step="0.01"
+                  value="0.8"
+                  class="value-input"
+                />
+              </div>
+            </div>
+            <div
+              class="slider-group"
+              data-key="decayFactorPrimary"
+              data-target="config"
+            >
+              <label>Durata</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="0.1" max="5" step="0.1" value="1.5" />
+                <input
+                  type="number"
+                  min="0.1"
+                  max="5"
+                  step="0.1"
+                  value="1.5"
+                  class="value-input"
+                />
+              </div>
+            </div>
+            <div
+              class="slider-group"
+              data-key="heartSizePrimary"
+              data-target="config"
+            >
+              <label>Dimensione Cuore</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="0.1" max="3" step="0.05" value="1" />
+                <input
+                  type="number"
+                  min="0.1"
+                  max="3"
+                  step="0.05"
+                  value="1"
+                  class="value-input"
+                />
+              </div>
+            </div>
+            <div
+              class="slider-group"
+              data-key="strokePrimary"
+              data-target="config"
+            >
+              <label>Spessore</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="1" max="200" step="1" value="80" />
+                <input
+                  type="number"
+                  min="1"
+                  max="200"
+                  step="1"
+                  value="80"
+                  class="value-input"
+                />
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="ui-panel">
           <h2 class="panel-header">Onde Secondarie</h2>
-          <div class="panel-content"></div>
+          <div class="panel-content">
+            <div
+              class="slider-group"
+              data-key="maxWavesSecondary"
+              data-target="config"
+            >
+              <label>Numero Onde</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="1" max="20" step="1" value="5" />
+                <input
+                  type="number"
+                  min="1"
+                  max="20"
+                  step="1"
+                  value="5"
+                  class="value-input"
+                />
+              </div>
+            </div>
+            <div
+              class="slider-group"
+              data-key="speedSecondary"
+              data-target="config"
+            >
+              <label>Velocità</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="1" max="200" step="1" value="30" />
+                <input
+                  type="number"
+                  min="1"
+                  max="200"
+                  step="1"
+                  value="30"
+                  class="value-input"
+                />
+              </div>
+            </div>
+            <div
+              class="slider-group"
+              data-key="intervalSecondary"
+              data-target="config"
+            >
+              <label>Frequenza</label>
+              <div class="slider-input-wrapper">
+                <input
+                  type="range"
+                  min="0.05"
+                  max="2"
+                  step="0.01"
+                  value="0.2"
+                />
+                <input
+                  type="number"
+                  min="0.05"
+                  max="2"
+                  step="0.01"
+                  value="0.2"
+                  class="value-input"
+                />
+              </div>
+            </div>
+            <div
+              class="slider-group"
+              data-key="alphaSecondary"
+              data-target="config"
+            >
+              <label>Opacità</label>
+              <div class="slider-input-wrapper">
+                <input
+                  type="range"
+                  min="0.01"
+                  max="1"
+                  step="0.01"
+                  value="0.8"
+                />
+                <input
+                  type="number"
+                  min="0.01"
+                  max="1"
+                  step="0.01"
+                  value="0.8"
+                  class="value-input"
+                />
+              </div>
+            </div>
+            <div
+              class="slider-group"
+              data-key="decayFactorSecondary"
+              data-target="config"
+            >
+              <label>Durata</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="0.1" max="5" step="0.1" value="1.5" />
+                <input
+                  type="number"
+                  min="0.1"
+                  max="5"
+                  step="0.1"
+                  value="1.5"
+                  class="value-input"
+                />
+              </div>
+            </div>
+            <div
+              class="slider-group"
+              data-key="heartSizeSecondary"
+              data-target="config"
+            >
+              <label>Dimensione Cuore</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="0.1" max="3" step="0.05" value="1" />
+                <input
+                  type="number"
+                  min="0.1"
+                  max="3"
+                  step="0.05"
+                  value="1"
+                  class="value-input"
+                />
+              </div>
+            </div>
+            <div
+              class="slider-group"
+              data-key="strokeSecondary"
+              data-target="config"
+            >
+              <label>Spessore</label>
+              <div class="slider-input-wrapper">
+                <input type="range" min="1" max="200" step="1" value="20" />
+                <input
+                  type="number"
+                  min="1"
+                  max="200"
+                  step="1"
+                  value="20"
+                  class="value-input"
+                />
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="ui-panel">
