--- a/index.html
+++ b/index.html
@@ -542,16 +542,12 @@
               <button id="save-sequence-btn" style="margin-top: 10px">
                 Salva Sequenza (PNG)
               </button>
-              <button id="record-mp4-btn" style="margin-top: 10px">
-                Esporta MP4 (auto-fallback a WebM)
+              <button id="offline-webm-btn" style="margin-top: 10px">
+                Offline CFR (WebM – CCapture)
               </button>
-              <div class="export-controls" style="margin-top: 10px">
-                <div class="progress"><div class="progress__bar" id="progress-bar"></div></div>
-                <div class="status-row">
-                  <span class="status-chip" id="rec-chip">Pronto</span>
-                </div>
-              </div>
-        
+              <button id="offline-png-btn" style="margin-top: 10px">
+                Offline CFR (PNG + ZIP)
+              </button>
               <p
                 id="export-status"
                 style="
