--- a/backup file/backup_index.html
+++ b/backup file/backup_index.html
@@ -542,6 +542,16 @@
               <button id="save-sequence-btn" style="margin-top: 10px">
                 Salva Sequenza (PNG)
               </button>
+              <button id="record-mp4-btn" style="margin-top: 10px">
+                Esporta MP4 (auto-fallback a WebM)
+              </button>
+              <div class="export-controls" style="margin-top: 10px">
+                <div class="progress"><div class="progress__bar" id="progress-bar"></div></div>
+                <div class="status-row">
+                  <span class="status-chip" id="rec-chip">Pronto</span>
+                </div>
+              </div>
+        
               <p
                 id="export-status"
                 style="
